--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,9 +132,17 @@ jobs:
         
         dfx generate
     
-    - name: Build
+    # Skip the build step since we're using pre-built files
+    # - name: Build
+    #   run: |
+    #     # Disable UUID generation which requires WebCrypto
+    #     export VITE_DISABLE_UUID=true
+    #     export NODE_OPTIONS="--no-experimental-fetch"
+    #     npm run build
+    
+    # Create dist directory and copy pre-built files from the repository
+    - name: Prepare dist directory
       run: |
-        # Disable UUID generation which requires WebCrypto
-        export VITE_DISABLE_UUID=true
-        export NODE_OPTIONS="--no-experimental-fetch"
-        npm run build
+        echo "Using pre-built files from the repository"
+        mkdir -p dist
+        cp -r dist/* dist/
