--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,12 @@ jobs:
     
     - name: Install dfx
       run: |
-        sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
+        # Install dfx in a non-interactive way
+        DFX_VERSION="0.25.0"
+        wget -O dfx-install.sh "https://github.com/dfinity/sdk/releases/download/${DFX_VERSION}/dfx-${DFX_VERSION}-x86_64-linux.sh"
+        chmod +x dfx-install.sh
+        ./dfx-install.sh --non-interactive
+        echo "$HOME/.local/bin" >> $GITHUB_PATH
         dfx --version
     
     - name: Start local replica
