--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,7 @@ jobs:
       run: |
         # Install dfx in a non-interactive way
         DFX_VERSION="0.25.0"
-        wget -O dfx-install.sh "https://github.com/dfinity/sdk/releases/download/${DFX_VERSION}/dfx-${DFX_VERSION}-x86_64-linux.sh"
-        chmod +x dfx-install.sh
-        ./dfx-install.sh --non-interactive
+        curl -fsSL https://internetcomputer.org/install.sh | DFX_VERSION="${DFX_VERSION}" bash -s -- --non-interactive
         echo "$HOME/.local/bin" >> $GITHUB_PATH
         dfx --version
     
