Fix Chain Key Finance mainnet deployment script and ISO Dapp errors
- Fix compilation errors in iso_dapp/main.mo related to transaction hash handling
- Fix syntax error in chain_key_integration.mo
- Update deploy-mainnet.sh to build and deploy the fixed iso_dapp canister
- Add top-up for canister that's out of cycles
- Add instructions for testing with real BTC and ETH

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ node_modules/
 .dfx/
 
 # Build output
-dist/
+# dist/ - Commenting out to include built files in the repository for CI/CD
 
 # Environment variables
 .env
